BAP-1266: Menu z-index fix

--- a/Bundle/FilterBundle/Resources/public/css/oro.filter.css
+++ b/Bundle/FilterBundle/Resources/public/css/oro.filter.css
@@ -33,7 +33,7 @@
     padding: 8px 8px 2px 8px;
     border: 1px solid #d3d3d3;
     display: none;
-    z-index: 990;
+    z-index: 700;
     left: 5px;
 }
 .filter-select .select-filter-widget {
